--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
 
     <div class="content">
         <div class="row">
-            <div class="col-xs-1 col-sm-1 col-md-2"></div>
-            <div class="col-xs-10 col-sm-10 col-md-8">
+            <div class="col-xs-0 col-sm-0 col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-5">
                 <div class="info">
                     <div class="row page header">
                         <h2>Contact Me</h2>
@@ -69,7 +69,28 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-1 col-sm-1 col-md-2"></div>
+
+            <div class="col-xs-12 col-sm-12 col-md-3">
+                <div class="info">
+                    <h3>Connect with me</h3> 
+                    <div class="panel-body">
+                        <div class="col-xs-3 col-sm-3 col-md-4">
+
+                            <img src="assets/images/facebook.png" alt="facebook">
+
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-4">
+
+                            <img src="assets/images/linkedin.jpg" alt="linkedin">
+
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-4">
+                            <img src="assets/images/whatsapp.png" alt="whatsapp">
+                        </div>                           
+                    </div>
+                </div>              
+            </div>
+            <div class="col-xs-0 col-sm-0 col-md-2"></div>
         </div>
     </div>
 
