test of portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
                     </div>                    
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail portfolio_image">
-                            <img src="assets/images/Adventure.jpg" alt="Adventure">
-                            <div class="text">Adventure</div>
+                            <img src="assets/images/Adventure.jpg" alt="Adventure" href="https://cpilker.github.io/unit-4-game/" target="">
+                            <div class="text">Crystal Game</div>
                         </div>                        
                         <div class="col-xs-12 col-md-4 thumbnail">
                             <img class="Portfolio" src="assets/images/Baseball.jpg" alt="sports">
