fixed portfolio URL

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                     </div>                    
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail portfolio_image">
-                            <a href="https://cpilker.github.io/unit-4-game/" target=""><img src="assets/images/Adventure.jpg" alt="Adventure"></a>
+                            <a href="https://cpilker.github.io/unit-4-game.github.io/" target=""><img src="assets/images/Adventure.jpg" alt="Adventure"></a>
                             <div class="text">Crystal Game</div>
                         </div>                        
                         <div class="col-xs-12 col-md-4 thumbnail">
