--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Portfolio</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
 
 <body background="assets/images/dust_scratches.png">
@@ -42,8 +43,8 @@
                             <div class="text">Crystal Game</div>
                         </div>                        
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <img class="Portfolio" src="assets/images/Baseball.jpg" alt="sports">
-                            <div class="text">Sports</div>
+                            <a href=" https://cpilker.github.io/TriviaGame.github.io/" target=""><img class="Portfolio" src="assets/images/Baseball.jpg" alt="sports"></a>
+                            <div class="text">Sports Trivia</div>
                         </div>                        
                         <div class="col-xs-0 col-md-4"></div>    
                     </div>
