--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <img src="assets/images/army.jpg" alt="army">
-                            <div class="text">Army</div>
+                            <a href="https://cpilker.github.io/giphy.github.io/" target=""><img src="assets/images/army.jpg" alt="army"></a>
+                            <div class="text">Giphy</div>
                         </div>                            
                         <div class="col-xs-12 col-md-4 thumbnail">
                                 <img src="assets/images/camping2.jpg" alt="camping">
