train schedule embedded

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,8 @@
                             <div class="text">Giphy</div>
                         </div>                            
                         <div class="col-xs-12 col-md-4 thumbnail">
-                                <img src="assets/images/camping2.jpg" alt="camping">
-                                <div class="text">Camping</div>
+                                <a href="https://cpilker.github.io/train_schedule.github.io/" target=""><img src="assets/images/camping2.jpg" alt="camping"></a>
+                                <div class="text">Train Schedule</div>
                         </div>                            
                         <div class="col-xs-0 col-md-4"></div>                
                     </div>
