updated portfolio page & about me

--- a/contact.html
+++ b/contact.html
@@ -75,17 +75,13 @@
                     <h3>Connect with me</h3> 
                     <div class="panel-body">
                         <div class="col-xs-3 col-sm-3 col-md-4">
-
-                            <img src="assets/images/facebook.png" alt="facebook">
-
+                            <a href="https://www.facebook.com/" target="_blank"><img src="assets/images/facebook.png" alt="facebook"></a>
                         </div>
                         <div class="col-xs-3 col-sm-3 col-md-4">
-
-                            <img src="assets/images/linkedin.jpg" alt="linkedin">
-
+                            <a href="https://www.linkedin.com/in/chad-pilker-994b048b/" target="_blank"><img src="assets/images/linkedin.jpg" alt="linkedin"></a>
                         </div>
                         <div class="col-xs-3 col-sm-3 col-md-4">
-                            <img src="assets/images/whatsapp.png" alt="whatsapp">
+                            <a href="https://github.com/cpilker" target="_blank"><img src="assets/images/github.png" alt="github"></a>
                         </div>                           
                     </div>
                 </div>              
