--- a/portfolio.html
+++ b/portfolio.html
@@ -39,30 +39,36 @@
                     </div>                    
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail portfolio_image">
-                            <a href="https://cpilker.github.io/unit-4-game.github.io/" target=""><img src="assets/images/Adventure.jpg" alt="Adventure"></a>
+                            <a href="https://cpilker.github.io/unit-4-game.github.io/" target=""><img src="assets/images/Adventure.jpg" alt="Crystal" class="images"></a>
                             <div class="text">Crystal Game</div>
+                            <a href="https://github.com/cpilker/unit-4-game.github.io" target=""><p class="Github-link">GitHub</p></a>
                         </div>                        
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <a href=" https://cpilker.github.io/TriviaGame.github.io/" target=""><img class="Portfolio" src="assets/images/Baseball.jpg" alt="sports"></a>
+                            <a href=" https://cpilker.github.io/TriviaGame.github.io/" target=""><img class="images" src="assets/images/Baseball.jpg" alt="sports"></a>
                             <div class="text">Sports Trivia</div>
+                            <a href="https://github.com/cpilker/TriviaGame.github.io" target=""><p class="Github-link">GitHub</p></a>
                         </div>                        
                         <div class="col-xs-0 col-md-4"></div>    
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <a href="https://cpilker.github.io/giphy.github.io/" target=""><img src="assets/images/army.jpg" alt="army"></a>
+                            <a href="https://cpilker.github.io/giphy.github.io/" target=""><img src="assets/images/army.jpg" alt="army" class="images"></a>
                             <div class="text">Giphy</div>
+                            <a href="https://github.com/cpilker/giphy.github.io" target=""><p class="Github-link">GitHub</p></a>
+
                         </div>                            
                         <div class="col-xs-12 col-md-4 thumbnail">
-                                <a href="https://cpilker.github.io/train_schedule.github.io/" target=""><img src="assets/images/camping2.jpg" alt="camping"></a>
+                                <a href="https://cpilker.github.io/train_schedule.github.io/" target=""><img src="assets/images/camping2.jpg" alt="camping" class="images"></a>
                                 <div class="text">Train Schedule</div>
+                                <a href="https://github.com/cpilker/train_schedule.github.io" target=""><p class="Github-link">GitHub</p></a>
                         </div>                            
                         <div class="col-xs-0 col-md-4"></div>                
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <img src="assets/images/IMG_0893 (1).jpg" alt="racing">   
-                            <div class="text">Ultramarathon</div>
+                            <a href="https://cpilker.github.io/songpigroject.github.io/" target=""><img src="assets/images/IMG_0893 (1).jpg" alt="racing" class="images"></a>  
+                            <div class="text">Song Pig</div>
+                            <a href="https://github.com/cpilker/songpigroject.github.io" target=""><p class="Github-link">GitHub</p></a>
                         </div>
                     </div>
                 </div>
@@ -72,14 +78,13 @@
                     <h3>Connect with me</h3> 
                     <div class="panel-body">
                         <div class="col-xs-3 col-sm-3 col-md-4">
-                            <img src="assets/images/facebook.png" alt="facebook">
-                            </div>
-                        <div class="col-xs-3 col-sm-3 col-md-4">
-                            <img src="assets/images/linkedin.jpg" alt="linkedin">
-        
+                            <a href="https://www.facebook.com/" target="_blank"><img src="assets/images/facebook.png" alt="facebook"></a>
                         </div>
                         <div class="col-xs-3 col-sm-3 col-md-4">
-                            <img src="assets/images/whatsapp.png" alt="whatsapp">
+                            <a href="https://www.linkedin.com/in/chad-pilker-994b048b/" target="_blank"><img src="assets/images/linkedin.jpg" alt="linkedin"></a>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-md-4">
+                            <a href="https://github.com/cpilker" target="_blank"><img src="assets/images/github.png" alt="github"></a>
                         </div>                           
                     </div>
                 </div>              
