--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,11 @@
                             <div class="text">Song Pig</div>
                             <a href="https://github.com/cpilker/songpigroject.github.io" target=""><p class="Github-link">GitHub</p></a>
                         </div>
+                        <div class="col-xs-12 col-md-4 thumbnail">
+                            <img src="assets/images/node.png" alt="node">
+                            <div class="text">Node.js</div>
+                            <a href="https://github.com/cpilker/liri-node-app.github.io" target=""><p class="Github-link">GitHub</p></a>
+                        </div>
                     </div>
                 </div>
             </div>
