--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,8 @@
                     </div>                    
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail portfolio_image">
-                            <a href="https://cpilker.github.io/unit-4-game.github.io/" target=""><img src="assets/images/Adventure.jpg" alt="Crystal" class="images"></a>
-                            <div class="text">Crystal Game</div>
-                            <a href="https://github.com/cpilker/unit-4-game.github.io" target=""><p class="Github-link">GitHub</p></a>
+                            <a href="https://github.com/cpilker/bamazon.github.io" target=""><img src="assets/images/mysql2.png" alt="MySQL" class="images"></a>
+                            <div class="text">MySQL</div>
                         </div>                        
                         <div class="col-xs-12 col-md-4 thumbnail">
                             <a href=" https://cpilker.github.io/TriviaGame.github.io/" target=""><img class="images" src="assets/images/Baseball.jpg" alt="sports"></a>
