--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,9 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <a href="https://cpilker.github.io/giphy.github.io/" target=""><img src="assets/images/army.jpg" alt="army" class="images"></a>
-                            <div class="text">Giphy</div>
-                            <a href="https://github.com/cpilker/giphy.github.io" target=""><p class="Github-link">GitHub</p></a>
+                            <a href="https://github.com/cpilker/FriendFinder.github.io" target=""><img src="assets/images/nodeexpress.png" alt="army" class="images"></a>
+                            <div class="text">Express</div>
+                            
 
                         </div>                            
                         <div class="col-xs-12 col-md-4 thumbnail">
