updated portfolio with handlebars

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,8 +57,8 @@
 
                         </div>                            
                         <div class="col-xs-12 col-md-4 thumbnail">
-                                <a href="https://cpilker.github.io/train_schedule.github.io/" target=""><img src="assets/images/camping2.jpg" alt="camping" class="images"></a>
-                                <div class="text">Train Schedule</div>
+                                <a href="https://github.com/cpilker/burger.github.io" target=""><img src="assets/images/handlebars.jpg" alt="camping" class="images"></a>
+                                <div class="text">Eat-a-burger</div>
                                 <a href="https://github.com/cpilker/train_schedule.github.io" target=""><p class="Github-link">GitHub</p></a>
                         </div>                            
                         <div class="col-xs-0 col-md-4"></div>                
