--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,8 @@
                             <div class="text">MySQL</div>
                         </div>                        
                         <div class="col-xs-12 col-md-4 thumbnail">
-                            <a href=" https://cpilker.github.io/TriviaGame.github.io/" target=""><img class="images" src="assets/images/Baseball.jpg" alt="sports"></a>
-                            <div class="text">Sports Trivia</div>
-                            <a href="https://github.com/cpilker/TriviaGame.github.io" target=""><p class="Github-link">GitHub</p></a>
+                            <a href="https://github.com/jjmckenzie704/recruit-hound" target=""><img class="images" src="assets/images/recruithound.PNG" alt="sports"></a>
+                            <div class="text">Recruit Hound</div>
                         </div>                        
                         <div class="col-xs-0 col-md-4"></div>    
                     </div>
